--- a/DataCleaning.ipynb
+++ b/DataCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "3c48d84c",
    "metadata": {},
    "outputs": [
@@ -178,14 +178,12 @@
     "import numpy as np\n",
     "\n",
     "# Load the datasets\n",
-    "# Assuming files are in the current directory for the VM, but user mentioned 'csv/' folder.\n",
-    "# I will read from current directory as that's where uploaded files land.\n",
-    "\n",
     "general_data = pd.read_csv('csv_in/general_data.csv')\n",
     "employee_survey = pd.read_csv('csv_in/employee_survey_data.csv')\n",
     "manager_survey = pd.read_csv('csv_in/manager_survey_data.csv')\n",
     "in_time = pd.read_csv('csv_in/in_time.csv')\n",
     "out_time = pd.read_csv('csv_in/out_time.csv')\n",
+    "\n",
     "# Inspect General Data\n",
     "print(\"--- General Data Info ---\")\n",
     "print(general_data.info())\n",
@@ -214,7 +212,7 @@
     "print(\"\\n--- Out Time Info ---\")\n",
     "print(out_time.info())\n",
     "print(\"\\n--- Out Time Head ---\")\n",
-    "print(out_time.iloc[:, :5].head()) # Show first 5 cols"
+    "print(out_time.iloc[:, :5].head())"
    ]
   },
   {
@@ -379,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "77cc3507",
    "metadata": {},
    "outputs": [
@@ -436,7 +434,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "\n",
-    "\n",
+    "# Create img directory if it doesn't exist\n",
     "if not os.path.exists('img'):\n",
     "    os.makedirs('img')\n",
     "\n",
@@ -522,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "id": "311931f1",
    "metadata": {},
    "outputs": [
@@ -530,8 +528,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset final généré avec succès : csv_out\\final_dataset.csv\n",
-      "Dimensions : (4410, 31)\n"
+      "Dataset successfully generated: csv_out\\final_dataset.csv\n",
+      "Dimensions: (4410, 31)\n"
      ]
     }
    ],
@@ -542,60 +540,60 @@
     "import seaborn as sns\n",
     "import os\n",
     "\n",
-    "# Création du dossier 'csv_out' s'il n'existe pas\n",
+    "# Create output directory if it doesn't exist\n",
     "if not os.path.exists('csv_out'):\n",
     "    os.makedirs('csv_out')\n",
     "\n",
-    "# 1. Chargement des données\n",
-    "# (Assurez-vous que le dossier 'csv_in/' existe et contient les fichiers)\n",
+    "# 1. Loading data\n",
+    "# (Ensure the 'csv_in/' folder exists and contains the files)\n",
     "general_data = pd.read_csv('csv_in/general_data.csv')\n",
     "employee_survey = pd.read_csv('csv_in/employee_survey_data.csv')\n",
     "manager_survey = pd.read_csv('csv_in/manager_survey_data.csv')\n",
     "in_time = pd.read_csv('csv_in/in_time.csv')\n",
     "out_time = pd.read_csv('csv_in/out_time.csv')\n",
     "\n",
-    "# 2. Traitement des Valeurs Manquantes (Imputation)\n",
-    "# Numérique -> Médiane\n",
+    "# 2. Handling Missing Values (Imputation)\n",
+    "# Numerical -> Median\n",
     "for col in ['NumCompaniesWorked', 'TotalWorkingYears']:\n",
     "    general_data[col] = general_data[col].fillna(general_data[col].median())\n",
     "\n",
-    "# Catégoriel -> Mode\n",
+    "# Categorical -> Mode\n",
     "for col in ['EnvironmentSatisfaction', 'JobSatisfaction', 'WorkLifeBalance']:\n",
     "    employee_survey[col] = employee_survey[col].fillna(employee_survey[col].mode()[0])\n",
     "\n",
-    "# 3. Ingénierie des Features Temporelles (Calcul des heures travaillées)\n",
-    "# Renommage pour la fusion\n",
+    "# 3. Temporal Feature Engineering (Calculating working hours)\n",
+    "# Renaming for merging\n",
     "in_time.rename(columns={'Unnamed: 0': 'EmployeeID'}, inplace=True)\n",
     "out_time.rename(columns={'Unnamed: 0': 'EmployeeID'}, inplace=True)\n",
     "\n",
-    "# Passage en Datetime et Indexation\n",
+    "# Converting to Datetime and Indexing\n",
     "in_time_idx = in_time.set_index('EmployeeID').apply(pd.to_datetime)\n",
     "out_time_idx = out_time.set_index('EmployeeID').apply(pd.to_datetime)\n",
     "\n",
-    "# Calcul de la durée (Out - In)\n",
+    "# Calculating duration (Out - In)\n",
     "working_duration = out_time_idx - in_time_idx\n",
     "\n",
-    "# Moyenne par employé (en heures)\n",
+    "# Average per employee (in hours)\n",
     "avg_hours = working_duration.mean(axis=1).dt.total_seconds() / 3600\n",
     "avg_hours_df = pd.DataFrame(avg_hours, columns=['AverageWorkingHours']).reset_index()\n",
     "\n",
-    "# 4. Fusion Finale\n",
+    "# 4. Final Merge\n",
     "main_df = general_data.merge(manager_survey, on='EmployeeID', how='inner')\n",
     "main_df = main_df.merge(employee_survey, on='EmployeeID', how='inner')\n",
     "main_df = main_df.merge(avg_hours_df, on='EmployeeID', how='inner')\n",
     "\n",
-    "# Gestion des rares cas sans pointage (ex: Employee 1 si NaN) -> Imputation par la moyenne globale\n",
+    "# Handling rare cases without time stamps (e.g., Employee 1 if NaN) -> Imputation with global mean\n",
     "if main_df['AverageWorkingHours'].isnull().sum() > 0:\n",
     "    main_df['AverageWorkingHours'].fillna(main_df['AverageWorkingHours'].mean(), inplace=True)\n",
     "\n",
-    "# Encodage binaire de la cible pour l'analyse\n",
+    "# Binary encoding of the target for analysis\n",
     "main_df['Attrition_Numeric'] = main_df['Attrition'].apply(lambda x: 1 if x == 'Yes' else 0)\n",
     "\n",
-    "# Sauvegarde dans le dossier csv_out\n",
+    "# Save to csv_out directory\n",
     "output_path = os.path.join('csv_out', 'final_dataset.csv')\n",
     "main_df.to_csv(output_path, index=False)\n",
-    "print(f\"Dataset final généré avec succès : {output_path}\")\n",
-    "print(f\"Dimensions : {main_df.shape}\")"
+    "print(f\"Dataset successfully generated: {output_path}\")\n",
+    "print(f\"Dimensions: {main_df.shape}\")"
    ]
   }
  ],
