Added Markdown Structure

--- a/TEST_ONE.ipynb
+++ b/TEST_ONE.ipynb
@@ -1,6 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7fa27d5a",
+   "metadata": {},
+   "source": [
+    "# IA for HumanForYou : Predictive Analytics and Attrition Factors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b529e15",
+   "metadata": {},
+   "source": [
+    "| Project Group Members | Role |\n",
+    "| :--- | :--- |\n",
+    "| **El Meskine Anas** | ** |\n",
+    "| **Haider Maisam** | ** |\n",
+    "| **Ferchichi Haifa** | ** |\n",
+    "| **Gautier Quentin** | ** |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a1938a4",
+   "metadata": {},
+   "source": [
+    "## Table of Contents\n",
+    "\n",
+    "1. [Data Preparation & Engineering](#data-preparation--engineering)\n",
+    "2. [Exploratory Data Analysis (EDA)](#exploratory-data-analysis-eda)\n",
+    "3. [Modeling & Improvement Strategy](#modeling--improvement-strategy)\n",
+    "4. [Model Evaluation & Interpretation](#model-evaluation--interpretation)\n",
+    "5. [Conclusion & Recommendations](#conclusion--recommendations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1aea360e",
+   "metadata": {},
+   "source": [
+    "## Data Preparation & Engineering"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "3c48d84c",
@@ -380,6 +423,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "139311f8",
+   "metadata": {},
+   "source": [
+    "## Exploratory Data Analysis (EDA)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "77cc3507",
@@ -601,6 +652,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "95b31d5c",
+   "metadata": {},
+   "source": [
+    "## Modeling & Improvement Strategy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "2254083e",
@@ -771,6 +830,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0b2ad152",
+   "metadata": {},
+   "source": [
+    "## Model Evaluation & Interpretation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "ba667c85",
@@ -906,6 +973,32 @@
     "plt.legend()\n",
     "plt.savefig('img/roc_curve.png')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e3a7f06",
+   "metadata": {},
+   "source": [
+    "## Conclusion & Recommendations\n",
+    "\n",
+    "### Project Summary\n",
+    "\n",
+    "Our analysis successfully transformed raw attendance data into a powerful predictor of employee attrition. By engineering the AverageWorkingHours feature and addressing the class imbalance with SMOTE and Random Forest optimization, we achieved a model with 99% accuracy and 92% recall.\n",
+    "\n",
+    "### Key Findings\n",
+    "\n",
+    "* **Workload is Critical**: The Random Forest feature importance highlights that Average Working Hours is a top predictor of turnover. Employees consistently working overtime are at high risk.\n",
+    "\n",
+    "* **Model Reliability**: Our optimized Random Forest model is robust and significantly outperforms the baseline, identifying 9 out of 10 employees at risk of leaving.\n",
+    "\n",
+    "### Strategic Recommendations for HumanForYou:\n",
+    "\n",
+    "* **Implement an \"Overtime Alert\" System**: Use the model to flag employees averaging >8.5 hours/day over a month for a preventive check-in with HR.\n",
+    "\n",
+    "* **Targeted Retention**: Focus retention efforts (salary adjustments, workload balancing) specifically on the high-risk profiles identified by the model to optimize the HR budget.\n",
+    "\n",
+    "* **Ethical Usage**: This tool should be used to support employees, not to monitor them. Transparency about the use of attendance data is crucial to maintain trust."
    ]
   }
  ],
