Added text zones for explanations and presentation

--- a/TEST_ONE.ipynb
+++ b/TEST_ONE.ipynb
@@ -23,16 +23,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fbd5d38a",
+   "metadata": {},
+   "source": [
+    "### 🎯 Context and Objectives\n",
+    "The pharmaceutical company **HumanForYou** faces a significant challenge: an annual employee turnover rate of approximately **15%**. This attrition leads to project delays, loss of expertise, and high recruitment costs.\n",
+    "\n",
+    "**Our Mission:**\n",
+    "1.  Analyze HR data to understand the **root causes** of employee departure.\n",
+    "2.  Develop a **predictive AI model** to identify employees at risk.\n",
+    "3.  Propose concrete **strategic recommendations** to improve retention."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a1938a4",
    "metadata": {},
    "source": [
     "## Table of Contents\n",
     "\n",
-    "1. [Data Preparation & Engineering](#data-preparation--engineering)\n",
-    "2. [Exploratory Data Analysis (EDA)](#exploratory-data-analysis-eda)\n",
-    "3. [Modeling & Improvement Strategy](#modeling--improvement-strategy)\n",
-    "4. [Model Evaluation & Interpretation](#model-evaluation--interpretation)\n",
-    "5. [Conclusion & Recommendations](#conclusion--recommendations)"
+    "* [1. Data Preparation & Engineering](#1-data-preparation--engineering)\n",
+    "* [2. Exploratory Data Analysis (EDA)]()\n",
+    "* [3. Modeling & Improvement Strategy]()\n",
+    "* [4. Model Evaluation & Interpretation]()\n",
+    "* [5. Conclusion & Recommendations]()"
    ]
   },
   {
@@ -40,7 +54,29 @@
    "id": "1aea360e",
    "metadata": {},
    "source": [
-    "## Data Preparation & Engineering"
+    "## 1. Data Preparation & Engineering\n",
+    "\n",
+    "To build a reliable model, we first aggregated data from five different sources (HR info, Manager surveys, Employee surveys, and Time logs).\n",
+    "\n",
+    "**Key Engineering Decisions:**\n",
+    "* **Data Imputation:** Instead of discarding incomplete rows (which would lose valuable information), we imputed missing numerical values with the **median** and categorical values with the **mode**.\n",
+    "* **Feature Engineering (`AverageWorkingHours`):** The raw data provided daily check-in/check-out times (`in_time`, `out_time`) but no summary of workload. We calculated the **average daily working duration** for each employee. This engineered feature proved critical, as we hypothesized a strong link between burnout and attrition.\n",
+    "* **Encoding:** Categorical variables (e.g., *Department*, *JobRole*) were transformed using **One-Hot Encoding** to be machine-readable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "089d0579",
+   "metadata": {},
+   "source": [
+    "### 1.1 Data Loading and Initial Cleaning\n",
+    "\n",
+    "**Objective:** aggregate the 5 scattered CSV files into a single usable dataframe.\n",
+    "\n",
+    "**Methodology & Justification:**\n",
+    "* **Missing Values Strategy:** We detected missing values in `NumCompaniesWorked`, `TotalWorkingYears`, and survey satisfaction scores.\n",
+    "    * *Decision:* We chose **Imputation** over deletion.\n",
+    "    * *Why?* Deleting rows would reduce our dataset size and potentially introduce bias. We replace missing numerical values with the **Median** (robust to outliers) and categorical values with the **Mode** (most frequent category)."
    ]
   },
   {
@@ -263,6 +299,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0133796b",
+   "metadata": {},
+   "source": [
+    "### 1.2 Feature Engineering: The \"Burnout\" Indicator\n",
+    "\n",
+    "**Objective:** Extract meaningful insights from the raw time logs (`in_time.csv` and `out_time.csv`).\n",
+    "\n",
+    "**Methodology & Justification:**\n",
+    "* **Transformation:** The raw timestamps are distinct for each day and employee, which is unusable for a global model. We calculate the difference between `Out` and `In` times to get daily duration, then compute the average per employee.\n",
+    "* **Why this feature?** We hypothesize that **workload** is a hidden driver of attrition. An employee consistently working 10+ hours is likely at higher risk of burnout than someone working standard hours. This information was not present in the general HR file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "da08ba38",
@@ -427,7 +477,13 @@
    "id": "139311f8",
    "metadata": {},
    "source": [
-    "## Exploratory Data Analysis (EDA)"
+    "## Exploratory Data Analysis (EDA)\n",
+    "\n",
+    "Before modeling, we visually investigated the relationships between key features and the target variable (`Attrition`).\n",
+    "\n",
+    "**Visual Insights:**\n",
+    "* **Attrition vs. Workload:** The boxplots reveal a clear trend: employees who leave tend to have significantly higher **Average Working Hours** than those who stay. This suggests **overwork** is a primary driver of turnover.\n",
+    "* **Correlation Matrix:** We observed a negative correlation between *Age*/*TotalWorkingYears* and Attrition, indicating that younger, less experienced employees are more volatile."
    ]
   },
   {
@@ -656,12 +712,69 @@
    "id": "95b31d5c",
    "metadata": {},
    "source": [
-    "## Modeling & Improvement Strategy"
+    "## Modeling & Improvement Strategy\n",
+    "\n",
+    "We framed this as a **Binary Classification** problem (0 = Stay, 1 = Leave).\n",
+    "\n",
+    "**Algorithm Selection:**\n",
+    "\n",
+    "1.  **Baseline (Logistic Regression):** Selected for its simplicity and interpretability to establish a performance benchmark.\n",
+    "2.  **Challenger (Random Forest):** Selected for its ability to capture non-linear relationships and interactions between features (e.g., Age vs. Salary).\n",
+    "\n",
+    "**Addressing Class Imbalance:**\n",
+    "\n",
+    "With only ~15% of employees leaving, a standard model might be biased towards the majority class (\"Stay\"). To improve the detection of leavers (**Recall**), we implemented two strategies:\n",
+    "\n",
+    "* **SMOTE (Synthetic Minority Over-sampling Technique):** Creating synthetic examples of leavers to balance the training data.\n",
+    "* **Hyperparameter Tuning (GridSearch):** Optimizing the Random Forest parameters (depth, number of trees) to prevent overfitting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87f907fb",
+   "metadata": {},
+   "source": [
+    "### 3.1 Encoding and Train/Test Split\n",
+    "\n",
+    "**Objective:** Prepare the data for machine learning algorithms.\n",
+    "\n",
+    "**Methodology & Justification:**\n",
+    "* **Encoding:** Algorithms cannot process text like \"Sales\" or \"Married\". We use **One-Hot Encoding** (`pd.get_dummies`) to convert these into binary numerical columns (0/1).\n",
+    "* **Splitting Strategy:** We split data into Training (75%) and Testing (25%) sets.\n",
+    "* **Crucial Detail (`stratify=y`):** Since our target class is imbalanced (only ~15% attrition), a random split might result in a test set with no leavers. Stratification ensures the proportion of leavers is preserved in both sets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1719f33",
+   "metadata": {},
+   "source": [
+    "### 3.2 Baseline Model: Logistic Regression\n",
+    "\n",
+    "**Objective:** Establish a performance benchmark with a simple, interpretable model.\n",
+    "\n",
+    "**Methodology & Justification:**\n",
+    "* **Scaling:** We apply `StandardScaler` to normalize features. This is **mandatory** for Logistic Regression to ensure that variables with large ranges (like Salary) do not dominate the coefficients.\n",
+    "* **Evaluation Focus:** We look beyond Accuracy. We pay close attention to the **Recall** of class '1' (Attrition), which measures how many actual leavers the model detected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea8cb296",
+   "metadata": {},
+   "source": [
+    "### 3.3 Interpretability: What drives Attrition?\n",
+    "\n",
+    "**Objective:** Explain the model's decisions to HR stakeholders (Transparency).\n",
+    "\n",
+    "**Methodology & Justification:**\n",
+    "* **Feature Importance Plot:** We extract the importance scores from the Random Forest.\n",
+    "* **Why?** A \"Black Box\" model is useless for strategy. Knowing *who* is leaving is good; knowing *why* (e.g., High Working Hours, Low Salary, Age) allows HumanForYou to take concrete, targeted actions to fix the root causes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2254083e",
    "metadata": {},
    "outputs": [
@@ -834,7 +947,51 @@
    "id": "0b2ad152",
    "metadata": {},
    "source": [
-    "## Model Evaluation & Interpretation"
+    "## Model Evaluation & Interpretation\n",
+    "\n",
+    "We evaluated our models focusing on **Recall** (Sensitivity) rather than just Accuracy. In an HR context, **missing a flight risk (False Negative)** is more costly than a false alarm.\n",
+    "\n",
+    "**Results Summary:**\n",
+    "\n",
+    "* **Logistic Regression:** High accuracy (~85%) but poor recall (0.25). It failed to detect most leavers.\n",
+    "* **Logistic Regression + SMOTE:** Recall improved significantly (0.75), validating the rebalancing strategy.\n",
+    "* **Random Forest (Optimized):** The best performing model with **99% Accuracy** and **92% Recall**. It successfully identifies 9 out of 10 employees at risk.\n",
+    "\n",
+    "**Feature Importance:**\n",
+    "\n",
+    "The Random Forest model identifies **AverageWorkingHours**, **Age**, and **MonthlyIncome** as the top predictors, confirming our EDA findings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec4f1397",
+   "metadata": {},
+   "source": [
+    "### 4.1 Improvement Strategy: Addressing Class Imbalance\n",
+    "\n",
+    "**Observation:** The baseline model has high accuracy but **low recall**. It is biased towards the majority class (\"Stay\") and fails to identify employees at risk.\n",
+    "\n",
+    "**Methodology & Justification:**\n",
+    "* **Solution: SMOTE (Synthetic Minority Over-sampling Technique).**\n",
+    "* **How it works:** Instead of simply duplicating existing leavers (which leads to overfitting), SMOTE creates \"synthetic\" new examples that are mathematically similar to existing leavers.\n",
+    "* **Goal:** Force the algorithm to pay more attention to the minority class by balancing the training distribution (50/50)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc22f86c",
+   "metadata": {},
+   "source": [
+    "### 4.2 Advanced Model: Random Forest Optimization\n",
+    "\n",
+    "**Objective:** Deploy a more robust model capable of capturing complex, non-linear relationships (e.g., the interaction between Age and Salary).\n",
+    "\n",
+    "**Methodology & Justification:**\n",
+    "* **Algorithm:** Random Forest is an ensemble method less prone to overfitting than a single Decision Tree.\n",
+    "* **Optimization (GridSearch):** We do not trust default parameters blindly. We use `GridSearchCV` to test combinations of:\n",
+    "    * `n_estimators`: Number of trees (stability).\n",
+    "    * `max_depth`: To control complexity and prevent the model from learning \"noise\".\n",
+    "* **Why?** This ensures the high performance (99% accuracy) is genuine and robust, not just a fluke."
    ]
   },
   {
@@ -980,25 +1137,26 @@
    "id": "9e3a7f06",
    "metadata": {},
    "source": [
-    "## Conclusion & Recommendations\n",
+    "## 5. Conclusion & Recommendations\n",
     "\n",
-    "### Project Summary\n",
+    "### Summary\n",
+    "Our analysis successfully transformed raw attendance data into a powerful predictor of employee attrition. By engineering the `AverageWorkingHours` feature and addressing the class imbalance with SMOTE and Random Forest optimization, we achieved a robust model capable of anticipating departures with **92% recall**.\n",
     "\n",
-    "Our analysis successfully transformed raw attendance data into a powerful predictor of employee attrition. By engineering the AverageWorkingHours feature and addressing the class imbalance with SMOTE and Random Forest optimization, we achieved a model with 99% accuracy and 92% recall.\n",
+    "### Strategic Recommendations for HumanForYou\n",
     "\n",
-    "### Key Findings\n",
+    "Based on the model's insights, we propose the following actions:\n",
     "\n",
-    "* **Workload is Critical**: The Random Forest feature importance highlights that Average Working Hours is a top predictor of turnover. Employees consistently working overtime are at high risk.\n",
+    "1.  **Implement an \"Overtime Alert\" System:**\n",
+    "    * **Action:** Use the model's logic to flag employees averaging **>8.5 hours/day** over a rolling month.\n",
+    "    * **Goal:** Enable HR to intervene proactively (workload adjustment) *before* burnout leads to resignation.\n",
     "\n",
-    "* **Model Reliability**: Our optimized Random Forest model is robust and significantly outperforms the baseline, identifying 9 out of 10 employees at risk of leaving.\n",
+    "2.  **Targeted Retention Program:**\n",
+    "    * **Action:** Review compensation packages specifically for **Junior profiles** (identified as high-risk by the model) who have high performance ratings.\n",
+    "    * **Goal:** Optimize the retention budget by focusing on high-value, high-risk employees.\n",
     "\n",
-    "### Strategic Recommendations for HumanForYou:\n",
-    "\n",
-    "* **Implement an \"Overtime Alert\" System**: Use the model to flag employees averaging >8.5 hours/day over a month for a preventive check-in with HR.\n",
-    "\n",
-    "* **Targeted Retention**: Focus retention efforts (salary adjustments, workload balancing) specifically on the high-risk profiles identified by the model to optimize the HR budget.\n",
-    "\n",
-    "* **Ethical Usage**: This tool should be used to support employees, not to monitor them. Transparency about the use of attendance data is crucial to maintain trust."
+    "3.  **Ethical \"Human-in-the-Loop\" Approach:**\n",
+    "    * **Principle:** This AI tool is for **support, not surveillance**.\n",
+    "    * **Guardrail:** Individual risk scores should never be the sole basis for HR decisions. Transparency with employees about how their data helps improve working conditions is essential to maintain trust."
    ]
   }
  ],
