--- a/TEST_ONE.ipynb
+++ b/TEST_ONE.ipynb
@@ -43,10 +43,18 @@
     "## Table of Contents\n",
     "\n",
     "* [1. Data Preparation & Engineering](#1-data-preparation--engineering)\n",
-    "* [2. Exploratory Data Analysis (EDA)]()\n",
-    "* [3. Modeling & Improvement Strategy]()\n",
-    "* [4. Model Evaluation & Interpretation]()\n",
-    "* [5. Conclusion & Recommendations]()"
+    "    * [1.1 Data Loading and Initial Cleaning](#11-data-loading-and-initial-cleaning)\n",
+    "    * [1.2 Feature Engineering: The \"Burnout\" Indicator](#12-feature-engineering-the-burnout-indicator)\n",
+    "* [2. Exploratory Data Analysis (EDA)](#2-exploratory-data-analysis-eda)\n",
+    "* [3. Modeling & Improvement Strategy](#3-modeling--improvement-strategy)\n",
+    "    * [3.1 Encoding and Train/Test Split](#31-encoding-and-traintest-split)\n",
+    "    * [3.2 Baseline Model: Logistic Regression](#32-baseline-model-logistic-regression)\n",
+    "    * [3.3 Interpretability: What drives attrition ?](#33-interpretability-what-drives-attrition)\n",
+    "* [4. Model Evaluation & Interpretation](#4-model-evaluation--interpretation)\n",
+    "    * [4.1 Improvement Strategy: Adressing Class Imbalance](#41-improvement-strategy-addressing-class-imbalance)\n",
+    "    * [4.2 Advanced Model: Random Forest Optimization](#42-advanced-model-random-forest-optimization)\n",
+    "* [5. Conclusion & Recommendations](#5-conclusion--recommendations)\n",
+    "    * [5.1 Possible Improvements (Pipeline, StratifiedShuffleSplit,...)](#51-possible-improvements-pipeline-stratifiedshufflesplit-)"
    ]
   },
   {
@@ -477,7 +485,7 @@
    "id": "139311f8",
    "metadata": {},
    "source": [
-    "## Exploratory Data Analysis (EDA)\n",
+    "## 2. Exploratory Data Analysis (EDA)\n",
     "\n",
     "Before modeling, we visually investigated the relationships between key features and the target variable (`Attrition`).\n",
     "\n",
@@ -712,7 +720,7 @@
    "id": "95b31d5c",
    "metadata": {},
    "source": [
-    "## Modeling & Improvement Strategy\n",
+    "## 3. Modeling & Improvement Strategy\n",
     "\n",
     "We framed this as a **Binary Classification** problem (0 = Stay, 1 = Leave).\n",
     "\n",
@@ -763,7 +771,7 @@
    "id": "ea8cb296",
    "metadata": {},
    "source": [
-    "### 3.3 Interpretability: What drives Attrition?\n",
+    "### 3.3 Interpretability: What drives attrition?\n",
     "\n",
     "**Objective:** Explain the model's decisions to HR stakeholders (Transparency).\n",
     "\n",
@@ -947,7 +955,7 @@
    "id": "0b2ad152",
    "metadata": {},
    "source": [
-    "## Model Evaluation & Interpretation\n",
+    "## 4. Model Evaluation & Interpretation\n",
     "\n",
     "We evaluated our models focusing on **Recall** (Sensitivity) rather than just Accuracy. In an HR context, **missing a flight risk (False Negative)** is more costly than a false alarm.\n",
     "\n",
@@ -1157,6 +1165,14 @@
     "3.  **Ethical \"Human-in-the-Loop\" Approach:**\n",
     "    * **Principle:** This AI tool is for **support, not surveillance**.\n",
     "    * **Guardrail:** Individual risk scores should never be the sole basis for HR decisions. Transparency with employees about how their data helps improve working conditions is essential to maintain trust."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60b912c3",
+   "metadata": {},
+   "source": [
+    "### 5.1 Possible Improvements (Pipeline, StratifiedShuffleSplit,...)"
    ]
   },
   {
