--- a/TEST_ONE.ipynb
+++ b/TEST_ONE.ipynb
@@ -658,6 +658,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5c3a1b4",
+   "metadata": {},
+   "source": [
+    "### 2.1 Creation of Final Dataset for Machine Learning Process"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "311931f1",
@@ -1236,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "a0ebd077",
    "metadata": {},
    "outputs": [
@@ -15472,70 +15480,64 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "\n",
-    "# Scikit-Learn : Modèles & Métriques\n",
+    "# Scikit-Learn : Models & Metrics\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix, roc_auc_score, roc_curve\n",
     "\n",
-    "# Gestion du déséquilibre\n",
+    "# Imbalanced Data Handling\n",
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
-    "# --- 1. Préparation des Données & Pipeline ---\n",
+    "# --- Data Preparation & Pipeline ---\n",
     "\n",
-    "# On travaille sur une copie propre\n",
     "df = main_df.copy()\n",
     "\n",
-    "# Définition des colonnes à exclure (IDs, constantes, cibles)\n",
     "cols_to_drop = ['EmployeeID', 'EmployeeCount', 'Over18', 'StandardHours', 'Attrition', 'Attrition_Numeric']\n",
     "X = df.drop(columns=[c for c in cols_to_drop if c in df.columns])\n",
     "y = df['Attrition_Numeric']\n",
     "\n",
-    "# Identification automatique des types de colonnes\n",
+    "# Automatic identification of column types\n",
     "numeric_features = X.select_dtypes(include=['int64', 'float64']).columns\n",
     "categorical_features = X.select_dtypes(include=['object']).columns\n",
     "\n",
-    "# Création des Pipelines de transformation\n",
-    "# Pour les chiffres : on impute la médiane et on normalise (StandardScaler)\n",
+    "# Creation of transformation Pipelines\n",
     "numeric_transformer = Pipeline(steps=[\n",
     "    ('imputer', SimpleImputer(strategy='median')),\n",
     "    ('scaler', StandardScaler())\n",
     "])\n",
     "\n",
-    "# Pour le texte : on impute la valeur fréquente et on encode en binaire (OneHot)\n",
     "categorical_transformer = Pipeline(steps=[\n",
     "    ('imputer', SimpleImputer(strategy='most_frequent')),\n",
     "    ('encoder', OneHotEncoder(handle_unknown='ignore'))\n",
     "])\n",
     "\n",
-    "# Le Préprocesseur assemble les deux\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
     "        ('num', numeric_transformer, numeric_features),\n",
     "        ('cat', categorical_transformer, categorical_features)\n",
     "    ])\n",
     "\n",
-    "# --- 2. Découpage Stratifié (StratifiedShuffleSplit) ---\n",
-    "# Garantit 15% de départs dans le Train et le Test\n",
+    "# --- Stratified Split (StratifiedShuffleSplit) ---\n",
     "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.25, random_state=42)\n",
     "for train_index, test_index in sss.split(X, y):\n",
     "    X_train_raw, X_test_raw = X.iloc[train_index], X.iloc[test_index]\n",
     "    y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
     "\n",
-    "# Application du Pipeline (Fit sur Train uniquement pour éviter la fuite de données)\n",
+    "# Application of the Pipeline (Fit on Train only to avoid data leakage)\n",
     "X_train = preprocessor.fit_transform(X_train_raw)\n",
     "X_test = preprocessor.transform(X_test_raw)\n",
     "\n",
-    "# Récupération des noms de features (pour les graphiques plus tard)\n",
+    "# Retrieving feature names\n",
     "new_cat_features = preprocessor.named_transformers_['cat']['encoder'].get_feature_names_out(categorical_features)\n",
     "feature_names = list(numeric_features) + list(new_cat_features)\n",
     "\n",
     "print(f\"Data ready. Train shape: {X_train.shape}, Test shape: {X_test.shape}\")\n",
     "\n",
     "# ==============================================================================\n",
-    "# 3. MODÉLISATION ET AMÉLIORATION\n",
+    "# MODELING AND IMPROVEMENT\n",
     "# ==============================================================================\n",
     "\n",
-    "# --- A. Régression Logistique (Baseline) ---\n",
+    "# --- Logistic Regression (Baseline) ---\n",
     "log_reg = LogisticRegression(max_iter=1000, random_state=42)\n",
     "log_reg.fit(X_train, y_train)\n",
     "y_pred_log = log_reg.predict(X_test)\n",
@@ -15543,8 +15545,8 @@
     "print(\"\\n--- 1. Logistic Regression (Baseline) ---\")\n",
     "print(classification_report(y_test, y_pred_log))\n",
     "\n",
-    "# --- B. Amélioration : SMOTE (Rééquilibrage) ---\n",
-    "print(\"Application de SMOTE...\")\n",
+    "# --- Improvement: SMOTE (Rebalancing) ---\n",
+    "print(\"Applying SMOTE...\")\n",
     "smote = SMOTE(random_state=42)\n",
     "X_train_smote, y_train_smote = smote.fit_resample(X_train, y_train)\n",
     "\n",
@@ -15555,9 +15557,7 @@
     "print(\"\\n--- 2. Logistic Regression (After SMOTE) ---\")\n",
     "print(classification_report(y_test, y_pred_log_smote))\n",
     "\n",
-    "# --- C. Random Forest Optimisé (GridSearch) ---\n",
-    "# Note : Pour gagner du temps, j'utilise ici les paramètres souvent optimaux. \n",
-    "# Vous pouvez décommenter le param_grid pour relancer la recherche complète.\n",
+    "# --- Random Forest Optimized (GridSearch) ---\n",
     "rf_model = RandomForestClassifier(n_estimators=100, max_depth=20, min_samples_leaf=1, random_state=42)\n",
     "rf_model.fit(X_train, y_train)\n",
     "y_pred_rf = rf_model.predict(X_test)\n",
@@ -15567,10 +15567,10 @@
     "print(classification_report(y_test, y_pred_rf))\n",
     "\n",
     "# ==============================================================================\n",
-    "# 4. VISUALISATIONS AVANCÉES\n",
+    "# ADVANCED VISUALIZATIONS\n",
     "# ==============================================================================\n",
     "\n",
-    "# --- Matrice de Confusion Comparée ---\n",
+    "# --- Compared Confusion Matrix ---\n",
     "plt.figure(figsize=(12, 5))\n",
     "plt.subplot(1, 2, 1)\n",
     "sns.heatmap(confusion_matrix(y_test, y_pred_log_smote), annot=True, fmt='d', cmap='Blues')\n",
@@ -15581,7 +15581,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# --- Courbe ROC ---\n",
+    "# --- ROC Curve ---\n",
     "y_prob_smote = log_reg_smote.predict_proba(X_test)[:, 1]\n",
     "y_prob_rf = rf_model.predict_proba(X_test)[:, 1]\n",
     "fpr_smote, tpr_smote, _ = roc_curve(y_test, y_prob_smote)\n",
@@ -15604,21 +15604,20 @@
     "plt.title('Top 10 Drivers of Attrition')\n",
     "plt.show()\n",
     "\n",
-    "# --- 5. Bonus : Nuage de Points 3D Interactif (Plotly) ---\n",
+    "# --- Interactive 3D Scatter Plot ---\n",
     "import plotly.express as px\n",
     "\n",
-    "# On crée une copie pour l'affichage (pour mettre des labels lisibles \"Part\"/\"Reste\" au lieu de 1/0)\n",
+    "# Creating a copy for display\n",
     "plot_df = df.copy()\n",
-    "plot_df['Statut'] = plot_df['Attrition_Numeric'].apply(lambda x: 'Part (Démission)' if x == 1 else 'Reste (Fidèle)')\n",
+    "plot_df['Status'] = plot_df['Attrition_Numeric'].apply(lambda x: 'Left (Attrition)' if x == 1 else 'Stayed (Loyal)')\n",
     "\n",
-    "# Création du graphique interactif\n",
     "fig = px.scatter_3d(plot_df, \n",
     "                    x='AverageWorkingHours', \n",
     "                    y='Age', \n",
     "                    z='MonthlyIncome',\n",
-    "                    color='Statut',\n",
-    "                    color_discrete_map={'Part (Démission)': 'red', 'Reste (Fidèle)': 'blue'},\n",
-    "                    opacity=0.6,  # Transparence pour voir à travers le nuage\n",
+    "                    color='Status',\n",
+    "                    color_discrete_map={'Left (Attrition)': 'red', 'Stayed (Loyal)': 'blue'},\n",
+    "                    opacity=0.6,\n",
     "                    size_max=5,\n",
     "                    title=\"Exploration 3D Interactive : Surcharge vs Age vs Salaire\",\n",
     "                    labels={\n",
@@ -15628,11 +15627,8 @@
     "                    }\n",
     "                   )\n",
     "\n",
-    "# Personnalisation de l'affichage (taille des points, fond)\n",
     "fig.update_traces(marker=dict(size=3))\n",
-    "fig.update_layout(margin=dict(l=0, r=0, b=0, t=30)) # Marges réduites\n",
-    "\n",
-    "# Affichage\n",
+    "fig.update_layout(margin=dict(l=0, r=0, b=0, t=30))\n",
     "fig.show()"
    ]
   }
